--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION             = 26
-def DEFAULT_TARGET_SDK_VERSION              = 26
-def DEFAULT_BUILD_TOOLS_VERSION             = '26.0.2'
+def DEFAULT_COMPILE_SDK_VERSION             = 27
+def DEFAULT_TARGET_SDK_VERSION              = 27
+def DEFAULT_BUILD_TOOLS_VERSION             = '27.0.3'
 def DEFAULT_GOOGLE_PLAY_SERVICES_VERSION    = '11.8.0'
 def DEFAULT_FIREBASE_MESSAGING_VERSION      = '11.8.0'
 
@@ -34,10 +34,10 @@ dependencies {
 
   compile fileTree(include: ['*.jar'], dir: 'libs')
   compile 'com.facebook.react:react-native:+'
-  compile 'com.android.support:support-v4:26.1.0'
-  compile 'com.android.support:appcompat-v7:26.1.0'
-  compile "com.google.android.gms:play-services-wallet:$googlePlayServicesVersion"
-  compile "com.google.firebase:firebase-core:$firebaseVersion"
+  compile 'com.android.support:support-v4:27.1.1'
+  compile 'com.android.support:appcompat-v7:27.1.1'
+  compile "com.google.android.gms:play-services-wallet:16.0.0"
+  compile "com.google.firebase:firebase-core:16.0.4"
   compile 'com.stripe:stripe-android:8.0.0'
   compile 'com.github.tipsi:CreditCardEntry:1.5.0'
 }
